--- a/ThousandWordsProject/Base.lproj/Main.storyboard
+++ b/ThousandWordsProject/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="8tq-6H-cUY" kind="push" id="J3z-TR-8pj"/>
+                                    <segue destination="8tq-6H-cUY" kind="push" identifier="Album Chosen" id="J3z-TR-8pj"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
